--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "pegjs-otf":              "1.2.17",
         "pegjs-util":             "1.4.20",
         "asty":                   "1.8.11",
-        "cache-lru":              "1.1.11"
+        "cache-lru":              "1.1.11",
+        "source-code-error":      "1.0.2"
     },
     "devDependencies": {
         "grunt":                  "1.3.0",
