--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "main":                       "lib/ael.node.js",
     "repository": {
         "type":                   "git",
-        "url":                    "https://github.com/rse/ael.git"
+        "url":                    "git+https://github.com/rse/ael.git"
     },
     "author": {
         "name":                   "Dr. Ralf S. Engelschall",
